--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Miguel Ángel Martínez-del-Amor</title>
+    <title>Naveed Ejaz</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -36,11 +36,11 @@
         <!-- LEFT COLUMN -->
         <div class="left">
           <h1 class="name">
-            Miguel Ángel Martínez-del-Amor
+            Naveed Ejaz
           </h1>
 
           <p class="subtitle">
-            <em>Ph.D. in Logic, Computer Science and Artificial Intelligence (University of Seville, Spain)</em><br />
+            <em>Ph.D. in Computer Science and Artificial Intelligence </em><br />
             <em>Computer Engineer (University of Murcia, Spain)</em>
           </p>
 
@@ -54,10 +54,10 @@
           <div class="role">
             <div>Associate Professor</div>
             <a href="#" class="role-link">
-              Department of Computer Science and Artificial Intelligence
+              School of Computing
             </a><br />
             <a href="#" class="role-link">
-              University of Seville (Spain)
+              Ulster University, Belfast, UK
             </a>
           </div>
         </div>
