--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Naveed Ejaz</title>
 
-    <!-- Fonts -->
+    <!-- Fonts (similar feel to screenshot) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,69 +19,89 @@
   <body>
     <!-- Top Navigation -->
     <header class="site-header">
-      <nav class="top-nav">
+      <nav class="top-nav" aria-label="Primary">
         <a class="nav-link" href="#">HOME</a>
         <a class="nav-link" href="#">RESEARCH</a>
         <a class="nav-link" href="#">PUBLICATIONS</a>
         <a class="nav-link" href="#">TEACHING</a>
-        <a class="nav-link" href="#">GPU+AI TRAINING</a>
-        <a class="nav-link nav-lang" href="#">[español]</a>
+        <a class="nav-link" href="#">PROJECTS</a>
+        <a class="nav-link nav-lang" href="#">[about]</a>
       </nav>
     </header>
 
-    <!-- Main Content -->
+    <!-- Main -->
     <main class="container">
       <section class="two-col">
-
-        <!-- LEFT COLUMN -->
+        <!-- LEFT -->
         <div class="left">
-          <h1 class="name">
-            Naveed Ejaz
-          </h1>
+          <h1 class="name">Naveed Ejaz</h1>
 
           <p class="subtitle">
-            <em>Ph.D. in Computer Science and Artificial Intelligence </em><br />
-            <em>Computer Engineer (University of Murcia, Spain)</em>
+            <em>Lecturer, Ulster University — Belfast, UK</em><br />
+            <em>AI Researcher · Experienced Educator · Industry–Academia Collaborator</em>
           </p>
 
-          <!-- PROFILE IMAGE -->
           <img
             src="assets/images/naveed.jpg"
-            alt="Profile photo"
+            alt="Naveed Ejaz"
             class="profile-image"
           />
 
           <div class="role">
-            <div>Associate Professor</div>
-            <a href="#" class="role-link">
-              School of Computing
-            </a><br />
-            <a href="#" class="role-link">
-              Ulster University, Belfast, UK
-            </a>
+            <div class="role-title">Areas</div>
+            <div>
+              Deep Learning · Machine Learning · Computer Vision · NLP · Data Science · Cloud-based AI
+            </div>
+          </div>
+
+          <div class="role" style="margin-top: 14px;">
+            <div class="role-title">Education</div>
+            <div>
+              Ph.D. in Computer Science (Artificial Intelligence)<br />
+              MS in Computer Software Engineering<br />
+              BS in Computer Science
+            </div>
           </div>
         </div>
 
-        <!-- RIGHT COLUMN -->
-        <aside class="right">
-          <h2>Contact Information</h2>
+        <!-- RIGHT -->
+        <aside class="right" aria-label="Contact">
+          <h2 class="panel-title">Contact Information</h2>
 
-          <p>
-            Departamento de Ciencias de la Computación e Inteligencia Artificial<br />
-            Escuela Técnica Superior de Ingeniería Informática<br />
-            Avda. Reina Mercedes S/N, 41012 Sevilla (Spain)
-          </p>
+          <div class="contact-block">
+            <div><strong>Location:</strong> Belfast, United Kingdom</div>
+            <div><strong>Email:</strong> naveed3797@gmail.com</div>
+            <div><strong>LinkedIn:</strong> Naveed Ejaz</div>
+          </div>
 
-          <p>
-            Office: H1.47<br />
-            Email: mdelamor 'at' us.es<br />
-            Phone: (+34) 954 557953
-          </p>
+          <h3 class="panel-subtitle">Profile Summary</h3>
+          <div class="contact-block">
+            <ul class="bullets">
+              <li>15+ years of academic and research experience across multiple countries.</li>
+              <li>Teaching in computer science, AI, data science, curriculum development, and supervision.</li>
+              <li>Research experience in ethics/compliance and industry–academia projects.</li>
+              <li>Supervision of postgraduate students in computer vision, deep learning, and NLP.</li>
+            </ul>
+          </div>
 
-          <h3>Related links</h3>
-          <p>[icons go here later]</p>
+          <h3 class="panel-subtitle">Core Skills</h3>
+          <div class="contact-block">
+            <div><strong>Languages:</strong> Python, R, C++, Java, JavaScript, SQL, MATLAB</div>
+            <div>
+              <strong>ML/DL:</strong> TensorFlow, Keras, PyTorch, Hugging Face Transformers
+            </div>
+            <div><strong>Data:</strong> Pandas, NumPy, Matplotlib</div>
+            <div><strong>Cloud/DevOps:</strong> AWS, Docker, Kubernetes</div>
+            <div><strong>Tools:</strong> Git, GitHub</div>
+          </div>
+
+          <h3 class="panel-subtitle">Related links</h3>
+          <div class="contact-block">
+            <div>
+              Add your links here (GitHub, Google Scholar, ORCID, etc.) when ready.
+            </div>
+          </div>
         </aside>
-
       </section>
     </main>
   </body>
