--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Naveed Ejaz</title>
+    <title>Naveed Ejaz | Ulster University</title>
 
-    <!-- Fonts (similar feel to screenshot) -->
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,25 +20,25 @@
     <!-- Top Navigation -->
     <header class="site-header">
       <nav class="top-nav" aria-label="Primary">
-        <a class="nav-link" href="#">HOME</a>
-        <a class="nav-link" href="#">RESEARCH</a>
-        <a class="nav-link" href="#">PUBLICATIONS</a>
-        <a class="nav-link" href="#">TEACHING</a>
-        <a class="nav-link" href="#">PROJECTS</a>
-        <a class="nav-link nav-lang" href="#">[about]</a>
+        <a class="nav-link" href="#home">HOME</a>
+        <a class="nav-link" href="#research">RESEARCH</a>
+        <a class="nav-link" href="#publications">PUBLICATIONS</a>
+        <a class="nav-link" href="#teaching">TEACHING</a>
+        <a class="nav-link" href="#students">STUDENTS</a>
       </nav>
     </header>
 
     <!-- Main -->
-    <main class="container">
+    <main class="container" id="home">
       <section class="two-col">
         <!-- LEFT -->
         <div class="left">
           <h1 class="name">Naveed Ejaz</h1>
 
           <p class="subtitle">
-            <em>Lecturer, Ulster University — Belfast, UK</em><br />
-            <em>AI Researcher · Experienced Educator · Industry–Academia Collaborator</em>
+            <em>Lecturer</em><br />
+            <em>School of Computing, Ulster University</em><br />
+            <em>Belfast, United Kingdom</em>
           </p>
 
           <img
@@ -48,20 +48,27 @@
           />
 
           <div class="role">
-            <div class="role-title">Areas</div>
-            <div>
-              Deep Learning · Machine Learning · Computer Vision · NLP · Data Science · Cloud-based AI
+            <div class="role-title">Research interests</div>
+            <div class="role-text">
+              Machine Learning · Deep Learning · Computer Vision · Natural Language Processing · Applied AI
             </div>
           </div>
 
-          <div class="role" style="margin-top: 14px;">
-            <div class="role-title">Education</div>
-            <div>
-              Ph.D. in Computer Science (Artificial Intelligence)<br />
-              MS in Computer Software Engineering<br />
-              BS in Computer Science
+          <div class="role" style="margin-top: 16px;">
+            <div class="role-title">Short bio</div>
+            <div class="role-text">
+              I am a Lecturer in the School of Computing at Ulster University (Belfast, UK). My work focuses on applied
+              AI methods—especially deep learning—for real-world problems, with interests spanning vision and language
+              technologies and their deployment in practical settings.
             </div>
           </div>
+
+          <!-- Optional anchors for single-page sections -->
+          <div style="height: 18px;"></div>
+          <div id="research"></div>
+          <div id="publications"></div>
+          <div id="teaching"></div>
+          <div id="students"></div>
         </div>
 
         <!-- RIGHT -->
@@ -69,36 +76,46 @@
           <h2 class="panel-title">Contact Information</h2>
 
           <div class="contact-block">
-            <div><strong>Location:</strong> Belfast, United Kingdom</div>
-            <div><strong>Email:</strong> naveed3797@gmail.com</div>
-            <div><strong>LinkedIn:</strong> Naveed Ejaz</div>
+            <div>School of Computing</div>
+            <div>Ulster University</div>
+            <div>Belfast, United Kingdom</div>
+
+            <div class="spacer"></div>
+
+            <div><strong>Email:</strong> <a class="inline-link" href="mailto:n.ejaz@ulster.ac.uk">n.ejaz@ulster.ac.uk</a></div>
+            <div><strong>Phone:</strong> <a class="inline-link" href="tel:+442895367152">+44 28 9536 7152</a></div>
           </div>
 
-          <h3 class="panel-subtitle">Profile Summary</h3>
+          <h3 class="panel-subtitle">Profiles</h3>
+
+          <div class="contact-block">
+            <div>
+              <a class="inline-link" href="https://scholar.google.ca/citations?user=EWORmh8AAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
+                Google Scholar
+              </a>
+            </div>
+            <div>
+              <a class="inline-link" href="https://www.linkedin.com/in/naveed-ejaz/" target="_blank" rel="noopener noreferrer">
+                LinkedIn
+              </a>
+            </div>
+          </div>
+
+          <h3 class="panel-subtitle">Quick links</h3>
           <div class="contact-block">
             <ul class="bullets">
-              <li>15+ years of academic and research experience across multiple countries.</li>
-              <li>Teaching in computer science, AI, data science, curriculum development, and supervision.</li>
-              <li>Research experience in ethics/compliance and industry–academia projects.</li>
-              <li>Supervision of postgraduate students in computer vision, deep learning, and NLP.</li>
+              <li><a class="inline-link" href="#research">Research overview</a></li>
+              <li><a class="inline-link" href="#publications">Selected publications</a></li>
+              <li><a class="inline-link" href="#teaching">Teaching</a></li>
+              <li><a class="inline-link" href="#students">Prospective students</a></li>
             </ul>
           </div>
 
-          <h3 class="panel-subtitle">Core Skills</h3>
-          <div class="contact-block">
-            <div><strong>Languages:</strong> Python, R, C++, Java, JavaScript, SQL, MATLAB</div>
-            <div>
-              <strong>ML/DL:</strong> TensorFlow, Keras, PyTorch, Hugging Face Transformers
-            </div>
-            <div><strong>Data:</strong> Pandas, NumPy, Matplotlib</div>
-            <div><strong>Cloud/DevOps:</strong> AWS, Docker, Kubernetes</div>
-            <div><strong>Tools:</strong> Git, GitHub</div>
-          </div>
-
-          <h3 class="panel-subtitle">Related links</h3>
+          <h3 class="panel-subtitle">Prospective students</h3>
           <div class="contact-block">
             <div>
-              Add your links here (GitHub, Google Scholar, ORCID, etc.) when ready.
+              I welcome enquiries from prospective MSc/PhD students interested in applied AI, deep learning,
+              computer vision, and NLP. Please email with a short description of your interests and a CV.
             </div>
           </div>
         </aside>
