--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
           <div class="role" style="margin-top: 16px;">
             <div class="role-title">Short bio</div>
             <div class="role-text">
-              I am a Lecturer in the School of Computing at Ulster University (Belfast, UK). My work focuses on applied
-              AI methods—especially deep learning—for real-world problems, with interests spanning vision and language
-              technologies and their deployment in practical settings.
+              I am a Lecturer in Computer Science at Ulster University Belfast. My research focuses on applied multimodal artificial intelligence for intelligent decision-making in healthcare, infrastructure, and societal systems, with an emphasis on real-world deployment, ethics, and impact.
             </div>
           </div>
 
