--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dr Naveed Ejaz</title>
 
-  <!-- Clean font (no build tools needed) -->
+  <!-- Clean font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -26,9 +26,10 @@
       margin:0;
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color:var(--ink);
-      background: radial-gradient(1200px 600px at 20% 0%, var(--bg1), transparent 60%),
-                  radial-gradient(1200px 600px at 80% 10%, var(--bg2), transparent 55%),
-                  #ffffff;
+      background:
+        radial-gradient(1200px 600px at 20% 0%, var(--bg1), transparent 60%),
+        radial-gradient(1200px 600px at 80% 10%, var(--bg2), transparent 55%),
+        #ffffff;
     }
 
     a{ color:var(--link); text-decoration:none; }
@@ -40,7 +41,7 @@
       padding: 36px 20px 60px;
     }
 
-    /* minimal top nav (optional; delete if you want even more minimal) */
+    /* Top bar */
     .top{
       display:flex;
       justify-content: space-between;
@@ -50,6 +51,7 @@
     .top .site{
       font-weight:700;
       letter-spacing:0.02em;
+      color: var(--muted);
     }
     .top nav a{
       margin-left: 14px;
@@ -67,7 +69,7 @@
       padding-top: 22px;
     }
 
-    /* left */
+    /* Left */
     .name{
       font-size: 2.35rem;
       font-weight: 800;
@@ -95,7 +97,7 @@
       overflow:hidden;
       background: var(--card);
       box-shadow: 0 10px 24px rgba(2,6,23,0.06);
-      margin: 18px 0 18px;
+      margin: 18px 0;
     }
     .photo img{
       width:100%;
@@ -106,16 +108,22 @@
     .role{
       margin-top: 6px;
       line-height: 1.75;
-      color: var(--ink);
     }
     .role .muted{ color: var(--muted); }
 
-    /* right */
+    .research{
+      margin-top: 10px;
+      color: var(--muted);
+      line-height: 1.65;
+      max-width: 75ch;
+    }
+
+    /* Right panel */
     .panel{
       background: rgba(255,255,255,0.75);
       border: 1px solid var(--line);
       border-radius: 10px;
-      padding: 18px 18px;
+      padding: 18px;
       box-shadow: 0 10px 24px rgba(2,6,23,0.05);
       backdrop-filter: blur(6px);
     }
@@ -127,11 +135,9 @@
     .panel p{
       margin: 4px 0;
       line-height: 1.65;
-      color: var(--ink);
     }
-    .panel .small{
-      color: var(--muted);
-    }
+    .panel .small{ color: var(--muted); }
+
     .links{
       margin-top: 14px;
       padding-top: 14px;
@@ -139,26 +145,17 @@
     }
     .links a{
       display:inline-block;
-      margin-right: 10px;
+      margin-right: 12px;
       margin-top: 6px;
       font-weight: 700;
       color: var(--muted);
     }
     .links a:hover{ color: var(--ink); text-decoration:none; }
 
-    /* minimal research line */
-    .research{
-      margin-top: 10px;
-      color: var(--muted);
-      line-height: 1.65;
-      max-width: 75ch;
-    }
-
     @media (max-width: 960px){
       .grid{ grid-template-columns: 1fr; gap: 18px; }
       .photo{ width: 220px; }
       .top{ flex-direction: column; align-items:flex-start; gap: 10px; }
-      .top nav a{ margin-left:0; margin-right:14px; }
       .name{ letter-spacing:0.09em; font-size:2.0rem; }
     }
   </style>
@@ -167,10 +164,10 @@
 <body>
   <div class="wrap">
 
+    <!-- TOP BAR (no repeated name) -->
     <div class="top">
-      <div class="site">Dr Naveed Ejaz</div>
+      <div class="site">Ulster University · School of Computing</div>
       <nav>
-        <!-- keep these if you have the pages; otherwise remove -->
         <a href="./">Home</a>
         <a href="./research.html">Research</a>
         <a href="./publications.html">Publications</a>
@@ -183,24 +180,32 @@
 
       <!-- LEFT -->
       <div>
-        <h1 class="name">Naveed Ejaz</h1>
+        <h1 class="name">Dr Naveed Ejaz</h1>
 
-        <p class="subtitle">Lecturer in Computer Science (Ulster University Belfast, Northern Ireland, UK)</p>
-        <p class="subtitle2">Applied Multimodal AI · Computer Vision · NLP/LLMs · Responsible AI</p>
+        <p class="subtitle">
+          Lecturer in Computer Science (Ulster University Belfast, Northern Ireland, UK)
+        </p>
+        <p class="subtitle2">
+          Applied Multimodal AI · Computer Vision · NLP / LLMs · Responsible AI
+        </p>
 
         <div class="photo">
-          <!-- change filename if needed -->
           <img src="assets/images/naveed.jpg" alt="Dr Naveed Ejaz">
         </div>
 
         <div class="role">
           <div><strong>Lecturer</strong></div>
           <div class="muted">School of Computing</div>
-          <div><a href="https://www.ulster.ac.uk/" target="_blank" rel="noopener">Ulster University</a> (Belfast)</div>
+          <div>
+            <a href="https://www.ulster.ac.uk/" target="_blank" rel="noopener">
+              Ulster University
+            </a> (Belfast)
+          </div>
 
           <p class="research">
-            My research focuses on <strong>applied multimodal artificial intelligence</strong> for intelligent decision-making in
-            <strong>healthcare</strong>, <strong>infrastructure</strong>, and <strong>societal systems</strong>, with an emphasis on
+            My research focuses on <strong>applied multimodal artificial intelligence</strong> for intelligent
+            decision-making in <strong>healthcare</strong>, <strong>infrastructure</strong>, and
+            <strong>societal systems</strong>, with an emphasis on
             <strong>real-world deployment</strong>, <strong>ethics</strong>, and <strong>impact</strong>.
           </p>
         </div>
@@ -210,15 +215,15 @@
       <div class="panel">
         <h3>Contact Information</h3>
         <p>School of Computing</p>
-        <p>Ulster University Belfast</p>
-        <p class="small">Belfast, Northern Ireland (UK)</p>
+        <p>Ulster University</p>
+        <p class="small">Belfast, Northern Ireland, UK</p>
         <p>Email: <a href="mailto:n.ejaz@ulster.ac.uk">n.ejaz@ulster.ac.uk</a></p>
+        <p>Phone: <a href="tel:+442895367152">+44 28 9536 7152</a></p>
 
         <div class="links">
           <h3>Related links</h3>
-          <a href="https://scholar.google.ca/citations?user=EWORmh8AAAAJ&hl=en" target="_blank" rel="noopener">Scholar</a>
+          <a href="https://scholar.google.ca/citations?user=EWORmh8AAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
           <a href="https://www.linkedin.com/in/naveed-ejaz/" target="_blank" rel="noopener">LinkedIn</a>
-          <a href="https://github.com/naveed-ejaz" target="_blank" rel="noopener">GitHub</a>
         </div>
       </div>
 
