--- a/index.html
+++ b/index.html
@@ -179,4 +179,56 @@
       <div>
         <h1 class="name">Dr Naveed Ejaz</h1>
 
-        <p class="subt
+        <p class="subtitle">
+          Lecturer in Computer Science (Ulster University Belfast, Northern Ireland, UK)
+        </p>
+        <p class="subtitle2">
+          Applied Multimodal AI · Computer Vision · NLP / LLMs · Responsible AI
+        </p>
+
+        <div class="photo">
+          <img src="assets/images/naveed.jpg" alt="Dr Naveed Ejaz">
+        </div>
+
+        <div class="role">
+          <div><strong>Lecturer</strong></div>
+          <div class="muted">School of Computing</div>
+          <div>
+            <a href="https://www.ulster.ac.uk/" target="_blank" rel="noopener">
+              Ulster University
+            </a> (Belfast)
+          </div>
+
+          <p class="research">
+            My research focuses on <strong>applied multimodal artificial intelligence</strong> for intelligent
+            decision-making in <strong>healthcare</strong>, <strong>infrastructure</strong>, and
+            <strong>societal systems</strong>, with an emphasis on
+            <strong>real-world deployment</strong>, <strong>ethics</strong>, and <strong>impact</strong>.
+          </p>
+        </div>
+      </div>
+
+      <!-- RIGHT -->
+      <div class="panel">
+        <h3>Contact Information</h3>
+        <p>School of Computing</p>
+        <p>Ulster University</p>
+        <p class="small">Belfast, Northern Ireland, UK</p>
+        <p>Email: <a href="mailto:n.ejaz@ulster.ac.uk">n.ejaz@ulster.ac.uk</a></p>
+        <p>Phone: <a href="tel:+442895367152">+44 28 9536 7152</a></p>
+
+        <div class="links">
+          <h3>Related links</h3>
+          <a href="https://scholar.google.ca/citations?user=EWORmh8AAAAJ&hl=en" target="_blank" rel="noopener">
+            Google Scholar
+          </a>
+          <a href="https://www.linkedin.com/in/naveed-ejaz/" target="_blank" rel="noopener">
+            LinkedIn
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</body>
+</html>
