--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dr Naveed Ejaz</title>
 
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -41,11 +40,9 @@
       padding: 36px 20px 60px;
     }
 
-    /* Top navigation (right only) */
     .top{
       display:flex;
       justify-content:flex-end;
-      align-items:center;
       margin-bottom: 26px;
     }
     .top nav a{
@@ -53,10 +50,6 @@
       color: var(--muted);
       font-weight:600;
       font-size: 0.95rem;
-    }
-    .top nav a:hover{
-      color: var(--ink);
-      text-decoration:none;
     }
 
     .grid{
@@ -66,7 +59,6 @@
       align-items:start;
     }
 
-    /* Left */
     .name{
       font-size: 2.4rem;
       font-weight: 800;
@@ -77,7 +69,6 @@
     .subtitle{
       margin: 0 0 6px 0;
       font-style: italic;
-      color: var(--ink);
       line-height: 1.55;
     }
     .subtitle2{
@@ -94,7 +85,7 @@
       overflow:hidden;
       background: var(--card);
       box-shadow: 0 10px 24px rgba(2,6,23,0.06);
-      margin: 18px 0 18px;
+      margin: 18px 0;
     }
     .photo img{
       width:100%;
@@ -114,7 +105,6 @@
       max-width: 75ch;
     }
 
-    /* Right panel */
     .panel{
       background: rgba(255,255,255,0.75);
       border: 1px solid var(--line);
@@ -142,13 +132,8 @@
     .links a{
       display:inline-block;
       margin-right: 14px;
-      margin-top: 6px;
       font-weight: 700;
       color: var(--muted);
-    }
-    .links a:hover{
-      color: var(--ink);
-      text-decoration:none;
     }
 
     @media (max-width: 960px){
@@ -162,7 +147,6 @@
 <body>
   <div class="wrap">
 
-    <!-- TOP RIGHT NAV -->
     <div class="top">
       <nav>
         <a href="./">Home</a>
@@ -191,7 +175,6 @@
         </div>
 
         <div class="role">
-          <div><strong>Lecturer</strong></div>
           <div class="muted">School of Computing</div>
           <div>
             <a href="https://www.ulster.ac.uk/" target="_blank" rel="noopener">
@@ -219,12 +202,8 @@
 
         <div class="links">
           <h3>Related links</h3>
-          <a href="https://scholar.google.ca/citations?user=EWORmh8AAAAJ&hl=en" target="_blank" rel="noopener">
-            Google Scholar
-          </a>
-          <a href="https://www.linkedin.com/in/naveed-ejaz/" target="_blank" rel="noopener">
-            LinkedIn
-          </a>
+          <a href="https://scholar.google.ca/citations?user=EWORmh8AAAAJ&hl=en" target="_blank">Google Scholar</a>
+          <a href="https://www.linkedin.com/in/naveed-ejaz/" target="_blank">LinkedIn</a>
         </div>
       </div>
 
